# py2js-mini

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  run_demos.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: bool_ops_demo.py  booleans.py  chains.py  classes_demo.py  classes_v2_demo.py  defaults_demo.py  dicts_funcs.py  eq_demo.py  exc_demo.py  for_else_demo.py  for_list.py  hello.py  imports_demo.py  kwargs2_demo.py  kwargs_demo.py  lists_ops_demo.py  math_demo.py  new_features_demo.py  repr_demo.py  slices.py  str_extras_demo.py  str_methods_demo.py  strings_demo.py  todo_demo.py  tuples_demo.py  unpack_demo.py  unpack_named_demo.py  varargs_demo.py  while_demo.py  with_demo.py
py2js/: cli.py  emit_js.py  ir.py  lowering.py
py2js/runtime/: pyrt.js
tests/: golden.py  test_golden.py
tests/golden/: bool_ops_demo.out  booleans.out  classes_demo.out  classes_v2_demo.out  defaults_demo.out  dicts_funcs.out  eq_demo.out  exc_demo.out  for_else_demo.out  for_list.out  kwargs2_demo.out  kwargs_demo.out  lists_ops_demo.out  math_demo.out  repr_demo.out  slices.out  str_extras_demo.out  str_methods_demo.out  strings_demo.out  todo_demo.out  tuples_demo.out  unpack_demo.out  unpack_named_demo.out  varargs_demo.out  while_demo.out  with_demo.out
tools/: gen_golden.py
